Fix issue #414: not wrapping on small screens.

--- a/Public/stylesheet.css
+++ b/Public/stylesheet.css
@@ -899,7 +899,6 @@ a img
     padding: 3px;
     display: block;
     clear: both;
-    width: 620px;
 }
 
 /* item labels in both left and right times */
